# eeg-signal-processing-classification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: part1_spindles.ipynb  part2_motor_imagery.ipynb
notes/: decisions_and_roadblocks.md
results/: hyperparameter_grid_search_EPCTL11.csv
results/part1/: lead_selection_summary.csv  spindle_performance_comparison.csv
results/part2/: part2_data_audit.csv
results/part2/baseline/: all_subjects_loso_lda_folds.csv  all_subjects_loso_lda_summary.csv  all_subjects_loso_svm_folds.csv  all_subjects_loso_svm_summary.csv  lda_baseline_all_subjects_loso_classification_report.csv  svm_baseline_all_subjects_loso_classification_report.csv
results/part2/tuning/lda_tuning_v1/: best_config.json  config_catalog.csv  experiments_summary.csv  fold_results.csv
results/part2/tuning/svm_tuning_v1/: best_config.json  config_catalog.csv  experiments_summary.csv  fold_results.csv
src/: __init__.py
src/part2/: config.py  experiment_tracking.py  model_factory.py  tuning_eval.py
